--- a/FormSubmit/src/js/views/submitForm.html
+++ b/FormSubmit/src/js/views/submitForm.html
@@ -1,4 +1,4 @@
-<h3>Submit Form</h3>
+<h3>Evaluate Course</h3>
 <div id="submitForm">
   <oj-label for="courseName">Course Name</oj-label>
   <oj-input-text id="courseName" value="{{courseName}}"></oj-input-text>
