--- a/FormSetUp/src/js/views/simpleForm.html
+++ b/FormSetUp/src/js/views/simpleForm.html
@@ -1,4 +1,4 @@
-<h3>Create form</h3>
+<h3>Evaluate Course</h3>
 <div id="evalForm">
   <oj-label for="courseName">Course Name</oj-label>
   <oj-input-text id="courseName" value="{{courseName}}"></oj-input-text>
