--- a/CompositeComponent/src/js/views/component.html
+++ b/CompositeComponent/src/js/views/component.html
@@ -4,7 +4,7 @@
  -->
 <div class="oj-hybrid-padding">
   <h1>Composite Component</h1>
-
-  <course-badge course-name="Oracle JET" course-image="/css/images/oracle_jet.png", course-grade="9">
-  </course-badge>
+<example-component city-name="Vienna"></example-component>
+  <!-- <course-badge course-name="Oracle JET" course-image="/css/images/oracle_jet.png", course-grade="9">
+  </course-badge> -->
 </div>
