Fixed the headers

--- a/Knockout/src/js/views/courses.html
+++ b/Knockout/src/js/views/courses.html
@@ -6,8 +6,8 @@
     <h1>Courses</h1>
     <table>
         <tr>
-            <th>Colors</th>
-            <th>Tools</th>
+            <th>Day</th>
+            <th>Subject</th>
             <th>Hours</th>
         </tr>
 
@@ -50,8 +50,8 @@
     <h1>Schedule</h1>
     <table>
         <tr>
-            <th>Colors</th>
-            <th>Tools</th>
+            <th>Day</th>
+            <th>Subject</th>
             <th>Hours</th>
         </tr>
         <tbody data-bind="foreach: schedule">
