--- a/Visualization/src/js/views/timeline.html
+++ b/Visualization/src/js/views/timeline.html
@@ -37,13 +37,14 @@
                        "zoomOrder": ["months", "weeks", "days"]
                      }'
                      major-axis.scale='quarters'
-                     start='[[new Date("Jan 1, 2018").toISOString()]]'
+                     start='[[new Date("Nov 31, 2017").toISOString()]]'
                      end='[[new Date("Dec 31, 2018").toISOString()]]'
                      selection-mode='single'
                      reference-objects='[[referenceObjects]]'
                      selection='["e4"]'
                      series='[[timelineSeries]]'
-                     style='width:100%;height:350px'>
+                     overview.rendered='on'
+                     style='width:100%;height:500px'>
         </oj-timeline>
 
         
