--- a/Visualization/src/css/app.css
+++ b/Visualization/src/css/app.css
@@ -5,3 +5,28 @@
     Description:
         This is where any of your application specific styles should be included
 */
+oj-module:not(.oj-complete) {
+    visibility: hidden; 
+  }
+  
+  oj-module {
+    display: block; 
+  }
+  
+  table {
+    border-collapse: collapse;
+    border: 1px solid black;
+  } 
+  
+  th,td {
+    border: 1px solid black;
+  }
+  
+  td {
+    width: 100px; 
+  }
+  
+  table.b {
+    table-layout: fixed;
+    width: 300px;    
+  }
