--- a/Visualization/src/js/views/schedule.html
+++ b/Visualization/src/js/views/schedule.html
@@ -2,15 +2,15 @@
  Copyright (c) 2014, 2018, Oracle and/or its affiliates.
  The Universal Permissive License (UPL), Version 1.0
  -->
-<div class="oj-hybrid-padding">
+ <div class="oj-hybrid-padding">
     <h1>Courses</h1>
-    <table>
+    <table >
         <tr>
-            <th>Colors</th>
-            <th>Tools</th>
+            <th>Day</th>
+            <th>Subject</th>
             <th>Hours</th>
         </tr>
-
+  
         <tr>
             <td>
                 <select data-bind="options: days, value: chosenDay, optionsCaption: 'No selection'">
@@ -25,33 +25,33 @@
                 </select>
             </td>
         </tr>
-
-    </table>
+  
+    </table class="b">
     <br \>
     <p>Day:
         <strong data-bind="text: chosenDay"></strong>
     </p>
-    <p>Field:
+    <p>Course:
         <strong data-bind="text: chosenField"></strong>
     </p>
     <p>Number of hours:
         <strong data-bind="text: chosenNrOfHours"></strong>
     </p>
-    <!-- ko if: chosenDay && chosenField && chosenNrOfHours -->
+    <!-- ko if: summaryVisible() -->
     <div>
         <p>Summary:
             <strong data-bind="text: summary"></strong>
         </p>
     </div>
-    <!-- /ko -->
-
+   
+  
     <button data-bind="click: addWork">Add commitment to the schedule</button>
-
+   <!-- /ko -->
     <h1>Schedule</h1>
     <table>
         <tr>
-            <th>Colors</th>
-            <th>Tools</th>
+            <th>Day</th>
+            <th>Subject</th>
             <th>Hours</th>
         </tr>
         <tbody data-bind="foreach: schedule">
@@ -70,6 +70,6 @@
                 </td>
             </tr>
         </tbody>
-
+  
     </table>
-</div>
+  </div>
