--- a/LayOut/src/js/views/dashboard.html
+++ b/LayOut/src/js/views/dashboard.html
@@ -1,12 +1,12 @@
 <div id="container" class="oj-panel">
-  <div id="header" class="oj-panel oj-flex oj-flex-items-pad">
-    <div class="oj-flex-item oj-md-2">
+  <div id="header" class="oj-panel oj-flex">
+    <div class="oj-flex oj-flex-item">
       <div class="oj-panel">Logo</div>
     </div>
-    <div class="oj-flex-item oj-md-6 oj-flex oj-md-align-items-center">
+    <div class="oj-flex oj-flex-item">
       <div class="oj-panel">App Name</div>
     </div>
-    <div class="oj-flex-item oj-md-4 oj-flex oj-flex-direction-row">
+    <div class="oj-flex oj-flex-item">
       <div class="oj-panel oj-flex-item">Nav1</div>
       <div class="oj-panel oj-flex-item">Nav2</div>
       <div class="oj-panel oj-flex-item">Nav3</div>
@@ -15,16 +15,17 @@
 
   <div id="content" class="oj-panel oj-flex oj-flex-direction-column">
     <div id="content1" class="oj-panel oj-flex-item">
-      <div class="oj-panel">Content</div>
-      <div class="oj-panel">Content</div>
-      <div class="oj-panel">Content</div>
+      <div class="oj-panel">Content1</div>
+      <div class="oj-panel">Content2</div>
+      <div class="oj-panel">Content3</div>
     </div>
-    <div id="content2" class="oj-panel oj-flex-item oj-flex oj-flex-direction-column oj-md-align-items-center">
-      <div class="oj-panel oj-flex-item">Content Detail</div>
+    <div id="content2" class="oj-panel oj-flex-item oj-flex oj-sm-justify-content-center oj-sm-align-items-center">
+      <div class="oj-panel oj-flex-item">Content detail</div>
     </div>
+
+  </div>
+  <div id="footer" class="oj-panel oj-flex oj-sm-justify-content-flex-end">
+    <div class="oj-panel">Footer</div>
   </div>
 
-  <div id="footer" class="oj-panel oj-flex oj-md-justify-content-flex-end">
-    <div class="oj-panel">footer</div>
-  </div>
 </div>
